[project]
name = "test-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic[vertex]>=0.60.0",
    "fastapi>=0.116.1",
    "langchain>=0.3.27",
    "langchain-google-vertexai>=2.0.27",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.35.0",
]
